fix container and sidebar overlap
remove bootstrap grid, move style to less, remove 'left' style

Original commit: elastic/x-pack@4be181f56b6a6ff837a1f01f228981ff2cce7aa5

--- a/graph/public/less/main.less
+++ b/graph/public/less/main.less
@@ -358,6 +358,12 @@
   margin-bottom: 2px;
 }
 
+#GraphSvgContainer {
+  position:fixed;
+  height:100%;
+  width:100%
+}
+
 .requestJsonView{
   height:200px;
 }
